test/files/neg/warn-unused-privates.check
warn-unused-privates.scala:31: warning: early initializers are deprecated; use trait parameters instead.
class Boppy extends {
                    ^
warn-unused-privates.scala:5: warning: private constructor in class Bippy is never used
  private def this(c: Int) = this(c, c)           // warn
              ^
warn-unused-privates.scala:7: warning: private method boop in class Bippy is never used
  private def boop(x: Int)            = x+a+b     // warn
              ^
warn-unused-privates.scala:9: warning: private val MILLIS2 in class Bippy is never used
  final private val MILLIS2: Int      = 1000      // warn
                    ^
warn-unused-privates.scala:16: warning: private val HEY_INSTANCE in object Bippy is never used
  private val HEY_INSTANCE: Int = 1000    // warn
              ^
warn-unused-privates.scala:17: warning: private val BOOL in object Bippy is never used
  private lazy val BOOL: Boolean = true   // warn
                   ^
warn-unused-privates.scala:41: warning: private val hummer in class Boppy is never used
  private val hummer = "def" // warn
              ^
warn-unused-privates.scala:48: warning: private var v1 in trait Accessors is never used
  private var v1: Int = 0 // warn
              ^
warn-unused-privates.scala:49: warning: private var v2 in trait Accessors is never used
  private var v2: Int = 0 // warn, never set
              ^
warn-unused-privates.scala:50: warning: private var v3 in trait Accessors is never used
  private var v3: Int = 0 // warn, never got
              ^
warn-unused-privates.scala:61: warning: private var s1 in class StableAccessors is never used
  private var s1: Int = 0 // warn
              ^
warn-unused-privates.scala:62: warning: private var s2 in class StableAccessors is never updated: consider using immutable val
  private var s2: Int = 0 // warn, never set
              ^
warn-unused-privates.scala:63: warning: private var s3 in class StableAccessors is never used
  private var s3: Int = 0 // warn, never got
              ^
warn-unused-privates.scala:75: warning: private default argument in trait DefaultArgs is never used
  private def bippy(x1: Int, x2: Int = 10, x3: Int = 15): Int = x1 + x2 + x3
                             ^
warn-unused-privates.scala:75: warning: private default argument in trait DefaultArgs is never used
  private def bippy(x1: Int, x2: Int = 10, x3: Int = 15): Int = x1 + x2 + x3
                                           ^
warn-unused-privates.scala:108: warning: private object Dongo in object Types is never used
  private object Dongo { def f = this } // warn
                 ^
warn-unused-privates.scala:141: warning: private method x_= in class OtherNames is never used
  private def x_=(i: Int): Unit = ()
              ^
warn-unused-privates.scala:142: warning: private method x in class OtherNames is never used
  private def x: Int = 42
              ^
warn-unused-privates.scala:143: warning: private method y_= in class OtherNames is never used
  private def y_=(i: Int): Unit = ()
              ^
warn-unused-privates.scala:109: warning: private class Bar1 in object Types is never used
  private class Bar1 // warn
                ^
warn-unused-privates.scala:111: warning: private type Alias1 in object Types is never used
  private type Alias1 = String // warn
               ^
warn-unused-privates.scala:221: warning: private class for your eyes only in object not even using companion privates is never used
  private implicit class `for your eyes only`(i: Int) {  // warn
                         ^
warn-unused-privates.scala:237: warning: private class D in class nonprivate alias is enclosing is never used
  private class D extends C2   // warn
                ^
warn-unused-privates.scala:102: warning: local var x in method f2 is never updated: consider using immutable val
    var x = 100 // warn about it being a var
        ^
warn-unused-privates.scala:17: warning: Auto-application to `()` is deprecated. Supply the empty argument list `()` explicitly to invoke method unary_!,
or remove the empty argument list from its definition (Java-defined methods are exempt).
In Scala 3, an unapplied method like this will be eta-expanded into a function.
  private lazy val BOOL: Boolean = true   // warn
                   ^
warn-unused-privates.scala:118: warning: Auto-application to `()` is deprecated. Supply the empty argument list `()` explicitly to invoke method initialized,
or remove the empty argument list from its definition (Java-defined methods are exempt).
In Scala 3, an unapplied method like this will be eta-expanded into a function.
    object HiObject { def f = this } // warn
           ^
error: No warnings can be incurred under -Werror.
26 warnings found
one error found
